--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "pre-commit>=4.2.0",
+    "pydantic-settings>=2.9.1",
+    "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.2",
 ]
@@ -23,7 +26,7 @@ line-length = 100
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["A002", "COM812", "D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212", "D400",  "D415", "E501", "EM101", "FIX002", "TD002", "TD003", "TRY003", "PLR0913"]
+ignore = ["A002", "COM812", "D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212", "D400",  "D415", "E501", "EM101", "FIX002", "TD002", "TD003", "TRY003", "PLR0913", "ANN201"]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
